Complete CRUD Assignment

--- a/home.css
+++ b/home.css
@@ -13,3 +13,16 @@ input[type=number] {
 .sticky{
   position: fixed;
 }
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+
+}
+tr{
+  padding-top: 30%;
+}
