--- a/home.css
+++ b/home.css
@@ -26,3 +26,43 @@ footer {
 tr{
   padding-top: 30%;
 }
+#record{
+  position: absolute;
+top: 50%;
+left: 50%;
+color: grey;
+}
+.css-table {
+  display: table;
+  }
+  
+  .css-table-header {
+  display: table-header-group;
+  font-weight: bold;
+  background-color: rgb(191, 191, 191);
+  }
+  
+  .css-table-body {
+  display: table-row-group;
+  }
+  
+  .css-table-row {
+  display: table-row;
+  }
+  
+  .css-table-header div,
+  .css-table-row div {
+  display: table-cell;
+  padding: 0 6px;
+  }
+  
+  .css-table-header div {
+  text-align: center;
+  border: 1px solid rgb(255, 255, 255);
+  }
+  #text{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 50px;
+  }
